# accounts

./: .gitignore  Dockerfile  Makefile  TODO.txt  docker-compose.yml  init_tg_client.py  log.logging  main.py  metanit.db  pyproject.toml  requirements.txt  server.crt  server.csr  server.key  testdata.txt  диаграмма.drawio
api/: __init__.py
config/: .env.example  config.py
data/: .env.example  config.json  config.py  database.db  init.sql  server.crt  server.csr  server.key  tgclient.session  tgclient.session-journal
db_container/: init.sql
entities/: CryptomusModels.py  models.py
filters/: Filters.py
handlers/: __init__.py  menu.py  start.py
messages/: add_acc_type_1.md  add_acc_type_success.md  basket_user.md  change_catalog.md  change_name_shop.md  change_seller_wallet_1.md  change_seller_wallet_start.md  change_wallet_1.md  change_wallet_start.md  complete_payment.md  confirm_deal_mes.md  create_deal_data_input.md  created_deal_to_user.md  delete_acc_type_1.md  delete_acc_type_success.md  delete_from_catalog.md  descision_on_deal.md  end_cancel_deal.md  enter_buyer_wallet.md  err_cancel_buy.md  err_loading_accs.md  err_send_text_manager.md  go_to_support.md  history_buy_user.md  load_acc_1.md  manager_confirm_cr_deal.md  mark_seller.md  menu.md  notify_buyer_cancel_deal.md  notify_buyer_confirmation_deal.md  notify_buyer_freezed_deal.md  notify_seller_cancel_deal.md  notify_seller_confirmation_deal.md  notify_seller_defect_acc.md  receiver.md  replace_catalog.md  rule_payment.md  rules.md  seccess_cancel_buy.md  seller_info.md  (+7 more)
models/: DatabaseModels.py  (+6 more)
(+166 files in other folders)
