[project]
name = "accounts"
version = "0.1.0"
description = "Магазин аккаунтов"
authors = [
    { name = "ebo_shit", email = "isakovn2005@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiogram>=3.17.0",
    "jinja2>=3.1.5",
    "pydantic>=2.10.5",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "fastapi (>=0.115.6)",
    "pandas (>=2.2.3)",
    "requests (>=2.32.3)",
    "Telethon (>=1.38.1)",
    "uvicorn (>=0.34.0)",
    "yarl (>=1.18.3)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
